--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
 				
     			<div class="col-md-4">
     				<div class="blog-entry ftco-animate">
-							<a href="#" class="img img-2" style="background-image: url(images/image_1.jpg);"></a>
+							<a href="https://kasunsoorige.github.io/Billy_s-Adventure-2D-Game/" class="img img-2" style="background-image: url(images/image_2d.jpg);"></a>
 							<div class="text text-2 pt-2 mt-3">
-								<span class="category mb-3 d-block"><a href="#">Technology</a></span>
-	              <h3 class="mb-4"><a href="#">The Newest Technology On This Year 2019</a></h3>
-	              <p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an almost</p>
+								<span class="category mb-3 d-block"><a href="#">Javascript/HTML/CSS</a></span>
+	              <h3 class="mb-4"><a href="https://github.com/kasunsoorige/Billy_s-Adventure-2D-Game">2D Adventure Game</a></h3>
+	              <p class="mb-4">2D Game created using HTML, CSS and Javascript</p>
 	              		
     			</div></div></div>
     		</div>
