--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 				
     			<div class="col-md-4">
     				<div class="blog-entry ftco-animate">
-							<a href="https://kasunsoorige.github.io/Billy_s-Adventure-2D-Game/" class="img img-2" style="background-image: url(images/image_2d.jpg);"></a>
+							<a href="https://kasunsoorige.github.io/Billy_s-Adventure-2D-Game/" class="img img-2" style="background-image: url(images/image_2d.png);"></a>
 							<div class="text text-2 pt-2 mt-3">
 								<span class="category mb-3 d-block"><a href="#">Javascript/HTML/CSS</a></span>
 	              <h3 class="mb-4"><a href="https://github.com/kasunsoorige/Billy_s-Adventure-2D-Game">2D Adventure Game</a></h3>
